@@ -189,6 +189,9 @@ Version 1.3-svn:
    * overall game performance improved when many units are visible
    * better performance when mouse is over a unit that sees many enemy units
    * show full username at bottom of screen when moused over in MP Lobby
+   * animations draw faster now and the speed is independent of the resolution
+   * fog/shroud is cleared after attack-move (bug #7131)
+
  * friends list
    * added a friend list in MP lobby, they will display a special icon in lobby,
      and you can be warned when they join the lobby even when not receiving
